force-app/main/default/objects/Candidate__c/fields/Exam_Clear_Date__c.field-meta.xml
<CustomField>
    <fullName>Exam_Clear_Date__c</fullName>
    <label>Exam Clear Date</label>
    <type>Date</type>
</CustomField>