force-app/main/default/objects/Candidate__c/fields/Expected_Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_of_Joining__c</fullName>
    <formula>IF(( ISPICKVAL( Result__c , &apos;Pass&apos;) &amp;&amp; Offer_Made__c == true &amp;&amp; (!ISNULL( Exam_Clear_Date__c )) ), Exam_Clear_Date__c + 30, DATE(0,0,0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Date of Joining</label>
    <type>Date</type>
</CustomField>