force-app/main/default/objects/Candidate__c/fields/Offer_Made__c.field-meta.xml
<CustomField>
    <fullName>Offer_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offer Made</label>
    <type>Checkbox</type>
</CustomField>