force-app/main/default/objects/Candidate__c/validationRules/CandidateIsFail.validationRule-meta.xml
<ValidationRule>
    <fullName>CandidateIsFail</fullName>
    <active>true</active>
    <errorConditionFormula>IF(( ISPICKVAL( Result__c , &apos;Fail&apos;) &amp;&amp; (! ISNULL( Exam_Clear_Date__c ) )), true, false)</errorConditionFormula>
    <errorMessage>Exam clear date can not be filled in for failed candidates</errorMessage>
</ValidationRule>